# platzi-neural-networks-tf

./: README.md  pyproject.toml
notebooks/: 01_jss_download_data.ipynb  02_jss_dataset_keras.ipynb
utils/: download_from_url.py
