[project]
name = "platzi-neural-networks-tf"
version = "0.1.0"
description = "Neural Networks for Data Science with Python"
authors = [{ name = "Jason", email = "jasonssdev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "ipywidgets",
    "python-dotenv",
    "openpyxl",
    "xlrd",
    "statsmodels",
    "pathlib",
    "scikit-learn",
    "imbalanced-learn",
    "category_encoders",
    "yellowbrick",
    "joblib",
    "scipy",
    "tensorflow",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
